--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -33,11 +33,6 @@
         "@first": true
     },
     "workspace": {
-        "@folders": [
-            {
-                "name": "src",
-                "path": "/Jisho/src"
-            }
-        ]
+        "@folders": []
     }
 }
