--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,48 @@
-alembic==1.5.5
-bcrypt==3.2.0
-boto3==1.16.18
-botocore==1.19.18
+asn1crypto==0.24.0
+astroid==1.6.6
+backports.functools-lru-cache==1.6.4
+bcrypt==3.1.7
 cffi==1.15.0
 click==7.1.2
-dnspython==2.1.0
-email-validator==1.1.2
-Faker==4.14.2
-Flask==1.1.2
-Flask-Bcrypt==0.7.1
-Flask-JWT-Extended==4.0.2
-Flask-Login==0.5.0
-flask-marshmallow==0.14.0
-Flask-Migrate==2.7.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-idna==3.1
+CodeIntel==0.9.3
+configparser==4.0.2
+cryptography==2.1.4
+Django==1.11.10
+enum34==1.1.10
+Flask==1.1.4
+futures==3.3.0
+idna==2.6
+ikpdb==1.2.3
+Inflector==2.0.12
+ipaddress==1.0.17
+isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.11.1
 Jinja2==2.11.3
-jmespath==0.10.0
-Mako==1.1.4
+keyring==10.6.0
+keyrings.alt==3.0
+lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
-marshmallow==3.10.0
-marshmallow-sqlalchemy==0.24.2
-Pillow==9.0.0
-psycopg2-binary==2.9.3
-pycparser==2.20
-PyJWT==2.0.1
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-editor==1.0.4
-s3transfer==0.3.3
-six==1.15.0
-SQLAlchemy==1.3.23
-text-unidecode==1.3
-urllib3==1.26.2
+mccabe==0.6.1
+parso==0.1.1
+pbr==5.8.1
+pycparser==2.21
+pycrypto==2.6.1
+pygobject==3.26.1
+pylint==1.8.1
+pylint-django==0.8.0
+pylint-flask==0.5
+pylint-plugin-utils==0.6
+pytz==2022.1
+pyxdg==0.25
+SecretStorage==2.3.1
+singledispatch==3.7.0
+six==1.16.0
+stevedore==1.32.0
+subprocess32==3.5.4
+virtualenv==16.2.0
+virtualenv-clone==0.5.7
+virtualenvwrapper==4.8.4
 Werkzeug==1.0.1
-WTForms==3.0.1
+wrapt==1.14.0
+zope.cachedescriptors==4.3.1
